backend/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: odradek
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: odradek
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odradek
  labels:
    app: odradek
spec:
  replicas: 1
  selector:
    matchLabels:
      app: odradek
  template:
    metadata:
      labels:
        app: odradek
    spec:
      containers:
      - name: odradek
        image: dcvz/odradek:v2
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
      imagePullSecrets:
      - name: regcred
